Fixed gap in landing triangle

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,7 +64,7 @@ body {
   &:after {
     content:'';
     position: absolute;
-    top: 100%;
+    top: 99%;
     left: 0;
     right: 0;
     margin: 0 auto;
